# SignalSlot

./: CMakeLists.txt
include/: Signal.hpp
src/: receiver.cpp  receiver_impl.cpp
test/: CMakeLists.txt  testSignalSlot.cpp
